fix: update alignment in form fieldset for improved layout consistency and responsiveness across index page and styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -324,7 +324,7 @@ fieldset {
   padding: 5.8rem 5.8rem;
   position: relative;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
   min-height: calc(100vh - 10rem);
   border-radius: 50px 0 0 0;
